new updated coffee webpage

--- a/css/coffee-project.css
+++ b/css/coffee-project.css
@@ -8,3 +8,11 @@ td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
+
+h1 {
+    font-family: "Apple Chancery";
+}
+
+h2{
+    font-family: "Apple Chancery";
+}
