added some formatting to the Roast fild in the List and changed color to the Company name.Trying to add a picture to the field next to the list area.

--- a/css/coffee-project.css
+++ b/css/coffee-project.css
@@ -25,3 +25,12 @@ h2{
      height: 160px;
      align-items: center;
 }
+
+p {
+    border: .5px solid black;
+    border-radius: 10px;
+    width: 100px;
+    background-color: #A38068;
+    color: white;
+    display: inline-block;
+}
